Fix review alignment and color

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -206,9 +206,10 @@
 .productView-ratingWrapper {
     display: inline-flex;
     line-height: 1;
+    vertical-align: middle;
 }
 
-.productView-reviewLink {
+.productView-reviewLink, #productReview_link {
     display: inline-block;
     margin-left: spacing("quarter");
     vertical-align: middle;
